test/bad/generics/type02.px

func f<Any T>(T x, Bool b) T def
    return b
